Fixed tests and assets.

--- a/app/views/lbb_cms_job_offers/job_offers/index.html.erb
+++ b/app/views/lbb_cms_job_offers/job_offers/index.html.erb
@@ -1,5 +1,5 @@
 <% if @job_offers.present? %>
   <%= render @job_offers %>
 <% else %>
-  <p> No hay ofertas creadas </p>
+  <p> No hay ofertas creadas. </p>
 <% end %>
