Added has_seo_fields to job offers

--- a/app/views/lbb_cms_job_offers/admin/job_offers/_form.html.erb
+++ b/app/views/lbb_cms_job_offers/admin/job_offers/_form.html.erb
@@ -8,6 +8,12 @@
                  object: f.object, f: f} %>
     </div>
   </div>
+
+  <div class="panel panel-default">
+    <div class="panel-body">  
+      <%= render partial: 'admin/shared/seo_fields', locals: {f: f} %>
+    </div>
+  </div>
   
   <div class="panel panel-default">
     <div class="panel-body">
