--- a/app/views/lbb_cms_job_offers/admin/job_offers/_form.html.erb
+++ b/app/views/lbb_cms_job_offers/admin/job_offers/_form.html.erb
@@ -11,7 +11,7 @@
 
   <div class="panel panel-default">
     <div class="panel-body">  
-      <%= render partial: 'admin/shared/seo_fields', locals: {f: f} %>
+      <%= render partial: 'lbb_cms_job_offers/admin/shared/seo_fields', locals: {f: f} %>
     </div>
   </div>
   
