--- a/app/views/lbb_cms_job_offers/admin/job_offers/edit.html.erb
+++ b/app/views/lbb_cms_job_offers/admin/job_offers/edit.html.erb
@@ -1,17 +1,17 @@
 <div class="panel panel-default">
   <div class="panel-heading">
-    <h3 class="panel-title">Editar oferta de trabajo</h3>
+    <h3 class="panel-title"><%= t '.title' %></h3>
   </div>
   <div class="panel-body">
     <%= render partial: 'form' %>
   </div>
   <div class="panel-body">
     <% if @job_offer.job_applications.empty? %>
-      <p>Ningún aplicante para esta oferta</p>
+      <p><%= t '.no_applicants' %></p>
     <% end %>
   </div>
   <div class="panel-heading">
-    <h3 class="panel-title">Curriculumns recibidos</h3>
+    <h3 class="panel-title"><%= t '.applicants' %></h3>
   </div>
   <div class="panel-body">
     <%= render partial: 'job_application', collection: @job_offer.job_applications %>
