--- a/app/views/wilson_cms_job_offers/admin/job_offers/_form.html.erb
+++ b/app/views/wilson_cms_job_offers/admin/job_offers/_form.html.erb
@@ -1,26 +1,20 @@
 <%= simple_nested_form_for [:admin, @job_offer] do |f| %>
-  
+
   <div class="panel panel-default">
     <div class="panel-body">
-      <%= render partial: 'wilson_cms_job_offers/admin/shared/localized_fields',
-                 locals: {fields: {name: {type: :string},
-                                   description: {type: :ckeditor}},
-                 object: f.object, f: f} %>
+
+      <%= f.input :name, wrapper_html: {class: 'form-group'}, input_html:{class: 'form-control'} %>
+      <%= f.input :description, as: :ckeditor, input_html: {ckeditor: {toolbar: 'Basic'}} %>
+
     </div>
   </div>
 
-  <div class="panel panel-default">
-    <div class="panel-body">  
-      <%= render partial: 'wilson_cms_job_offers/admin/shared/seo_fields', locals: {f: f} %>
-    </div>
-  </div>
-  
   <div class="panel panel-default">
     <div class="panel-body">
       <%= f.seasons_for @job_offer %>
     </div>
   </div>
 
-  <%= f.button :submit, class: 'btn btn-primary' %>
+  <%= f.button :submit, t('wilson_cms.admin.shared.actions.submit'), class: 'btn btn-primary' %>
 
 <% end %>
