--- a/app/views/wilson_cms_job_offers/admin/job_offers/_job_offer.html.erb
+++ b/app/views/wilson_cms_job_offers/admin/job_offers/_job_offer.html.erb
@@ -10,6 +10,6 @@
   </td>
   <td>
     <%= link_to t('.edit'), edit_admin_job_offer_path(job_offer) %> |
-    <%= link_to t('.destroy'), admin_job_offer_path(job_offer), method: :delete, 'data-confirm' => t('.confirm') %>
+    <%= link_to t('.destroy'), admin_job_offer_path(job_offer), method: :delete, data:{confirm: t('.confirm')} %>
   </td>
 </tr>
