--- a/app/views/wilson_cms_job_offers/admin/job_offers/new.html.erb
+++ b/app/views/wilson_cms_job_offers/admin/job_offers/new.html.erb
@@ -3,6 +3,8 @@
     <h3 class="panel-title"><%= t '.title' %></h3>
   </div>
   <div class="panel-body">
-    <%= render partial: 'form' %>
+    <%= simple_nested_form_for [:admin, @job_offer] do |f| %>
+      <%= render partial: 'form', locals: {f: f} %>
+    <% end %>
   </div>
 </div>
