--- a/app/views/wilson_cms_job_offers/job_offers/_job_offer.html.erb
+++ b/app/views/wilson_cms_job_offers/job_offers/_job_offer.html.erb
@@ -1,3 +1,9 @@
-<h2><%= link_to job_offer.name, job_offer_path(job_offer) %></h2>
-<p><%= job_offer.description %></p>
-<hr/>
+<tr>
+  <td> <%= job_offer.id %> </td>
+  <td> <%= job_offer.name %> </td>
+  <td> <%= job_offer.description %> </td>
+  <td>
+    <%= link_to t('.edit'), edit_admin_job_offer_path(id: job_offer.id) %> |
+    <%= link_to t('.destroy'), admin_job_offer_path(id: job_offer.id), method: :delete, data:{confirm: t('.confirm')} %>
+  </td>
+</tr>
