added link to job_application show from job_offer

--- a/app/views/wilson_cms_job_offers/admin/job_offers/_job_application.html.erb
+++ b/app/views/wilson_cms_job_offers/admin/job_offers/_job_application.html.erb
@@ -1,1 +1,1 @@
-<p><%= link_to job_application.cv_file_name, job_application.cv.url %></p>
+<p><%= link_to job_application.name, admin_job_application_path(job_application) %></p>
